src/features/events_list/components/ShortState/ShortState.module.css
.shortPanel {
  width: 100%;
  height: min-content;
}

.noDisasters {
  text-align: center;
  padding: calc(var(--unit) * 4) 0;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  gap: var(--unit);
}

.noDisasterMsg {
  width: 100%;
}

.callToAction {
  width: 100%;
}

